# chatroom-rs

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs  name_gen.rs
src/: main.rs
