[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
anyhow = "1.0.71"
tokio-stream = "0.1.14"
futures = "0.3.28"